syntax = "proto3";

package profile;

service ProfileService {
  rpc GetProfile (GetProfileDto) returns (GetProfileResponse);
  rpc CreateProfile (CreateProfileDto) returns (Undefined);
}

message GetProfileResponse{
  optional int32 id = 1;
  optional string email = 2;
  optional string password = 3;
  optional string role = 4;
}

message GetProfileDto{
  optional int32 id = 1;
  optional string email = 2;
}

message CreateProfileDto{
  string email = 1;
  string password = 2;
}

message Undefined {

}
